[package]
name = "charred"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
charrid = { git = "https://github.com/CharredChat/CharrID", branch = "master" }
tokio = { version = "1.27.0", features = ["rt-multi-thread", "macros", "sync"]}
serde = { version = "1.0.160", features = ["derive"] }
serde_json = "1.0.96"
futures = "0.3.28"
redis = "0.23.0"
futures-util = "0.3.28"
warp = "0.3.4"
